# ts-python-sast

./: .gitignore  DYNAMIC_DETECTION.md  README.md  REAL_WORLD_TEST_ANALYSIS.md  SEMANTIC_DETECTOR_RESULTS.md  ast.xml  config.json  log.html  old_context.md  phase_test_summary.md  pyproject.toml  results.json  results.sarif  taint_results.json  test_dynamic_detection.py  test_fibonacci.py  test_heuristic_simple.py  test_simple_taint.py  test_taint.py  unsafe_full_callgraph.dot  vulnerable_callgraph.dot  vulnerable_callgraph.json
demo/: README.md  secure.py  secure_alternatives.py  vulnerable.py  vulnerable_data_processor.py  vulnerable_devops_automation.py  vulnerable_web_app.py
examples/: safe.py  unsafe.py
rules/python/: eval.yaml  hardcoded_secrets.yaml  os_system.yaml  pickle_unsafe.yaml  requests_noverify.yaml  sql_injection.yaml  subprocess.yaml  weak_crypto.yaml  yaml_unsafe.yaml
src/: __init__.py  cli.py
src/graph/: __init__.py  analyzer.py  builder.py  exporter.py  models.py  symbol_table.py
src/parsing/: __init__.py  ast_utils.py  parser.py
src/report/: __init__.py  console.py  json_reporter.py  sarif.py
src/rules/: __init__.py  engine.py  matcher.py  models.py
src/taint/: __init__.py  engine.py  heuristics.py  models.py  module_tracker.py  reporter.py  sanitizers.py  semantic_detector.py  sinks.py  sources.py
src/viewer/: __init__.py  server.py
tests/: test_rules.py
